src/test/ui/borrowck/borrowck-uninit-in-assignop.stderr
error[E0381]: use of possibly uninitialized variable: `x`
  --> $DIR/borrowck-uninit-in-assignop.rs:6:5
   |
LL |     x += 1;
   |     ^^^^^^ use of possibly uninitialized `x`

error[E0381]: use of possibly uninitialized variable: `x`
  --> $DIR/borrowck-uninit-in-assignop.rs:9:5
   |
LL |     x -= 1;
   |     ^^^^^^ use of possibly uninitialized `x`

error[E0381]: use of possibly uninitialized variable: `x`
  --> $DIR/borrowck-uninit-in-assignop.rs:12:5
   |
LL |     x *= 1;
   |     ^^^^^^ use of possibly uninitialized `x`

error[E0381]: use of possibly uninitialized variable: `x`
  --> $DIR/borrowck-uninit-in-assignop.rs:15:5
   |
LL |     x /= 1;
   |     ^^^^^^ use of possibly uninitialized `x`

error[E0381]: use of possibly uninitialized variable: `x`
  --> $DIR/borrowck-uninit-in-assignop.rs:18:5
   |
LL |     x %= 1;
   |     ^^^^^^ use of possibly uninitialized `x`

error[E0381]: use of possibly uninitialized variable: `x`
  --> $DIR/borrowck-uninit-in-assignop.rs:21:5
   |
LL |     x ^= 1;
   |     ^^^^^^ use of possibly uninitialized `x`

error[E0381]: use of possibly uninitialized variable: `x`
  --> $DIR/borrowck-uninit-in-assignop.rs:24:5
   |
LL |     x &= 1;
   |     ^^^^^^ use of possibly uninitialized `x`

error[E0381]: use of possibly uninitialized variable: `x`
  --> $DIR/borrowck-uninit-in-assignop.rs:27:5
   |
LL |     x |= 1;
   |     ^^^^^^ use of possibly uninitialized `x`

error[E0381]: use of possibly uninitialized variable: `x`
  --> $DIR/borrowck-uninit-in-assignop.rs:30:5
   |
LL |     x <<= 1;
   |     ^^^^^^^ use of possibly uninitialized `x`

error[E0381]: use of possibly uninitialized variable: `x`
  --> $DIR/borrowck-uninit-in-assignop.rs:33:5
   |
LL |     x >>= 1;
   |     ^^^^^^^ use of possibly uninitialized `x`

error: aborting due to 10 previous errors

For more information about this error, try `rustc --explain E0381`.
